Parameterize bus stop and route

--- a/play/01/ch01.ipynb
+++ b/play/01/ch01.ipynb
@@ -79,6 +79,149 @@
     "    for pt in doc.findall('.//pt'):\n",
     "        print(pt.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command options: ['c:\\\\dev\\\\git\\\\repos\\\\learn.python\\\\play\\\\venv\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\EkCHOTECHAWANWONG\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-600e9028-fe5b-4bd9-9ad6-5409f7e5c6a7.json']\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\dev\\git\\repos\\learn.python\\play\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3425: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print('Command options:', sys.argv)\n",
+    "raise SystemExit(0)\n",
+    "import urllib.request\n",
+    "from xml.etree.ElementTree import XML\n",
+    "\n",
+    "url = 'http://ctabustracker.com/bustime/map/getStopPredictions.jsp?stop=14787&route=22'\n",
+    "with urllib.request.urlopen(url) as u:\n",
+    "    data = u.read()\n",
+    "    doc = XML(data)\n",
+    "    for pt in doc.findall('.//pt'):\n",
+    "        print(pt.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ex5.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file ex5.py\n",
+    "\n",
+    "from sys import argv\n",
+    "script, first, second, third = argv\n",
+    "\n",
+    "print(\"The script is called:\", script)\n",
+    "print(\"Your first variable is:\", first)\n",
+    "print(\"Your second variable is:\", second)\n",
+    "print(\"Your third variable is:\", third)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The script is called: ex5.py\n",
+      "Your first variable is: first\n",
+      "Your second variable is: 2nd\n",
+      "Your third variable is: 3rd\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ex5 first 2nd 3rd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing nextbus.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile nextbus.py\n",
+    "\n",
+    "import sys\n",
+    "if len(sys.argv) != 3:\n",
+    "    raise SystemExit(\"Usage: sys.argv[0] routeid stopid\")\n",
+    "\n",
+    "print(sys.argv)\n",
+    "import urllib.request\n",
+    "from xml.etree.ElementTree import XML\n",
+    "\n",
+    "script, routeid, stopid = sys.argv\n",
+    "\n",
+    "url = 'http://ctabustracker.com/bustime/map/getStopPredictions.jsp?route={}&stop={}'.format(routeid, stopid)\n",
+    "print(\"url = {}\".format(url))\n",
+    "with urllib.request.urlopen(url) as u:\n",
+    "    data = u.read()\n",
+    "    doc = XML(data)\n",
+    "    for pt in doc.findall('.//pt'):\n",
+    "        print(pt.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['nextbus.py', '22', '14787']\n",
+      "url = http://ctabustracker.com/bustime/map/getStopPredictions.jsp?route=22&stop=14787\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run nextbus 22 14787"
+   ]
   }
  ],
  "metadata": {
