--- a/play/01/ch01.ipynb
+++ b/play/01/ch01.ipynb
@@ -172,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing nextbus.py\n"
+      "Overwriting nextbus.py\n"
      ]
     }
    ],
@@ -193,7 +193,6 @@
     "print(sys.argv)\n",
     "import urllib.request\n",
     "from xml.etree.ElementTree import XML\n",
-    "\n",
     "script, routeid, stopid = sys.argv\n",
     "\n",
     "url = 'http://ctabustracker.com/bustime/map/getStopPredictions.jsp?route={}&stop={}'.format(routeid, stopid)\n",
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -215,12 +214,83 @@
      "output_type": "stream",
      "text": [
       "['nextbus.py', '22', '14787']\n",
-      "url = http://ctabustracker.com/bustime/map/getStopPredictions.jsp?route=22&stop=14787\n"
+      "url = http://ctabustracker.com/bustime/map/getStopPredictions.jsp?route=22&stop=14787\n",
+      "11 MIN\n",
+      "15 MIN\n"
      ]
     }
    ],
    "source": [
     "%run nextbus 22 14787"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting nextbus-debug.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile nextbus-debug.py\n",
+    "\n",
+    "import sys\n",
+    "if len(sys.argv) != 3:\n",
+    "    raise SystemExit(\"Usage: sys.argv[0] routeid stopid\")\n",
+    "\n",
+    "print(sys.argv)\n",
+    "import urllib.request\n",
+    "from xml.etree.ElementTree import XML\n",
+    "script, routeid, stopid = sys.argv\n",
+    "\n",
+    "url = 'http://ctabustracker.com/bustime/map/getStopPredictions.jsp?route={}&stop={}'.format(routeid, stopid)\n",
+    "print(\"url = {}\".format(url))\n",
+    "u = urllib.request.urlopen(url)\n",
+    "data = u.read()\n",
+    "doc = XML(data)\n",
+    "\n",
+    "# Set a breakpoint and launch a debugger\n",
+    "import pdb;\n",
+    "pdb.set_trace()\n",
+    "\n",
+    "for pt in doc.findall('.//pt'):\n",
+    "    # intentional typo\n",
+    "    print(pt.txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['nextbus-debug.py', '22', '14787']\n",
+      "url = http://ctabustracker.com/bustime/map/getStopPredictions.jsp?route=22&stop=14787\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'xml.etree.ElementTree.Element' object has no attribute 'txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mC:\\dev\\git\\repos\\learn.python\\pythonprog\\play\\01\\nextbus-debug.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mpt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdoc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.//pt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;31m# intentional typo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtxt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'xml.etree.ElementTree.Element' object has no attribute 'txt'"
+     ]
+    }
+   ],
+   "source": [
+    "%run nextbus-debug 22 14787"
    ]
   }
  ],
