--- a/play/03/ch03.ipynb
+++ b/play/03/ch03.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +250,35 @@
     "        parts[2] = int(parts[2])\n",
     "        parts[3] = float(parts[3])\n",
     "        total += parts[2] * parts[3]\n",
+    "\n",
+    "print('Total cost: ', total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total cost:  44671.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.3 Project using the CSV module to read data\n",
+    "import csv\n",
+    "\n",
+    "total = 0.0\n",
+    "with open('Data/portfolio2.csv', 'r') as f:\n",
+    "    rows = csv.reader(f)\n",
+    "    headers = next(rows) # skip the first line\n",
+    "    for row in rows:\n",
+    "        row[2] = int(row[2])\n",
+    "        row[3] = float(row[3])\n",
+    "        total += row[2] * row[3]\n",
     "\n",
     "print('Total cost: ', total)"
    ]
