Fix: restrict glob to portfolio*.csv

--- a/play/04/ch04.ipynb
+++ b/play/04/ch04.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +83,7 @@
    ],
    "source": [
     "# 4.2 Project moving a script into a function\n",
+    "# Using glob to generate a list of files\n",
     "import csv\n",
     "\n",
     "def portfolio_cost(filename):\n",
@@ -101,7 +102,7 @@
     "    return total\n",
     "\n",
     "import glob\n",
-    "files = glob.glob('Data/*.csv')\n",
+    "files = glob.glob('Data/portfolio*.csv')\n",
     "for file in files:\n",
     "    print(file, 'total cost:', portfolio_cost(file) )\n"
    ]
