--- a/play/04/ch04.ipynb
+++ b/play/04/ch04.ipynb
@@ -106,6 +106,214 @@
     "for file in files:\n",
     "    print(file, 'total cost:', portfolio_cost(file) )\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bad row: ['CAT', '2006-09-23', '', '83.44']\n",
+      "Reason: invalid literal for int() with base 10: ''\n",
+      "Bad row: ['MSFT', '2006-10-31', 'N/A', '65.10']\n",
+      "Reason: invalid literal for int() with base 10: 'N/A'\n",
+      "Total cost:  28900.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.3 Handling bad data and exception handling\n",
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for row in rows:\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:\n",
+    "                print('Bad row:', row)\n",
+    "                print('Reason:', err)\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row: 3 bad row: ['CAT', '2006-09-23', '', '83.44']\n",
+      "Reason: invalid literal for int() with base 10: ''\n",
+      "Row: 6 bad row: ['MSFT', '2006-10-31', 'N/A', '65.10']\n",
+      "Reason: invalid literal for int() with base 10: 'N/A'\n",
+      "Total cost:  28900.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.3 Handling bad data and exception handling\n",
+    "# Introduce a rowno to help track where the error is in the data\n",
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        rowno = 0\n",
+    "        for row in rows:\n",
+    "            rowno += 1\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:\n",
+    "                print('Row:', rowno, 'bad row:', row)\n",
+    "                print('Reason:', err)\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row: 3 bad row: ['CAT', '2006-09-23', '', '83.44']\n",
+      "Reason: invalid literal for int() with base 10: ''\n",
+      "Row: 6 bad row: ['MSFT', '2006-10-31', 'N/A', '65.10']\n",
+      "Reason: invalid literal for int() with base 10: 'N/A'\n",
+      "Total cost:  28900.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.3 Handling bad data and exception handling\n",
+    "# Introduce a rowno to help track where the error is in the data\n",
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        rowno = 0\n",
+    "        for row in rows:\n",
+    "            rowno += 1\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:\n",
+    "                print('Row:', rowno, 'bad row:', row)\n",
+    "                print('Reason:', err)\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Spring'), (2, 'Summer'), (3, 'Fall'), (4, 'Winter')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Play with enumerate\n",
+    "seasons = ['Spring', 'Summer', 'Fall', 'Winter']\n",
+    "enumerate(seasons)\n",
+    "list(enumerate(seasons))\n",
+    "list(enumerate(seasons, start=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row: 3 bad row: ['CAT', '2006-09-23', '', '83.44']\n",
+      "Reason: invalid literal for int() with base 10: ''\n",
+      "Row: 6 bad row: ['MSFT', '2006-10-31', 'N/A', '65.10']\n",
+      "Reason: invalid literal for int() with base 10: 'N/A'\n",
+      "Total cost:  28900.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4.3 Handling bad data and exception handling\n",
+    "# Introduce enumerate as a counter in the for loop\n",
+    "# to track where the error is in the data\n",
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:\n",
+    "                print('Row:', rowno, 'bad row:', row)\n",
+    "                print('Reason:', err)\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv'))"
+   ]
   }
  ],
  "metadata": {
