--- a/play/04/ch04.ipynb
+++ b/play/04/ch04.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[(1, 'Spring'), (2, 'Summer'), (3, 'Fall'), (4, 'Winter')]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,6 +313,230 @@
     "    return total\n",
     "\n",
     "print('Total cost: ', portfolio_cost('Data/missing.csv'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.4 Function Design Consideration\n",
+    "### Anti-pattern: Diaper\n",
+    "A generic catching all exception is dangerous because it can hide a programming error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row: 1 bad row: ['AA', '2007-06-11', 100, '32.20']\n",
+      "Reason: name 'flot' is not defined\n",
+      "Row: 2 bad row: ['IBM', '2007-05-13', 50, '91.10']\n",
+      "Reason: name 'flot' is not defined\n",
+      "Row: 3 bad row: ['CAT', '2006-09-23', '', '83.44']\n",
+      "Reason: invalid literal for int() with base 10: ''\n",
+      "Row: 4 bad row: ['MSFT', '2007-05-17', 200, '51.23']\n",
+      "Reason: name 'flot' is not defined\n",
+      "Row: 5 bad row: ['GE', '2006-02-01', 95, '40.37']\n",
+      "Reason: name 'flot' is not defined\n",
+      "Row: 6 bad row: ['MSFT', '2006-10-31', 'N/A', '65.10']\n",
+      "Reason: invalid literal for int() with base 10: 'N/A'\n",
+      "Row: 7 bad row: ['IBM', '2006-07-09', 100, '70.44']\n",
+      "Reason: name 'flot' is not defined\n",
+      "Total cost:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = flot(row[3])\n",
+    "            except Exception as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                print('Row:', rowno, 'bad row:', row)\n",
+    "                print('Reason:', err)\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row: 3 bad row: ['CAT', '2006-09-23', '', '83.44']\n",
+      "Reason: invalid literal for int() with base 10: ''\n",
+      "Row: 6 bad row: ['MSFT', '2006-10-31', 'N/A', '65.10']\n",
+      "Reason: invalid literal for int() with base 10: 'N/A'\n",
+      "Total cost:  28900.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename, errors='warn'):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calling portfolio_cost and explicitly silencing error\n",
+    "```python\n",
+    "# cryptic use of positional argument\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv', 'silent'))\n",
+    "# keyword argument looks much more meaningful\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv', errors = 'silent'))\n",
+    "```\n",
+    "### We can force keyword argument by adding * in the argument list like this\n",
+    "```python\n",
+    "def portfolio_cost(filename, *, errors='warn'):\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total cost:  28900.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename, *, errors='warn'):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "# this one will throw TypeError ... takes 1 positional argument but 2 were given\n",
+    "# print('Total cost: ', portfolio_cost('Data/missing.csv', 'silent'))\n",
+    "# the 2nd argument must be keyword argument named errors as follows\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv', errors = 'silent'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add more sophistry into a range of valid value of errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row: 3 bad row: ['CAT', '2006-09-23', '', '83.44']\n",
+      "Reason: invalid literal for int() with base 10: ''\n",
+      "Row: 6 bad row: ['MSFT', '2006-10-31', 'N/A', '65.10']\n",
+      "Reason: invalid literal for int() with base 10: 'N/A'\n",
+      "Total cost:  28900.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def portfolio_cost(filename, *, errors='warn'):\n",
+    "    '''\n",
+    "    Computes total shares*price for a CSV file with name, date, shares, price data\n",
+    "    '''\n",
+    "\n",
+    "    if errors not in ['warn', 'silent', 'raise']:\n",
+    "        raise ValueError(\"errors must be one of 'warn', 'silent', 'raise'\")\n",
+    "    total = 0.0\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                elif errors == 'raise':\n",
+    "                    raise    # Re-raise the last exception\n",
+    "                else:\n",
+    "                    pass    # Silence\n",
+    "                continue    # skip to the next row\n",
+    "            total += row[2] * row[3]\n",
+    "    return total\n",
+    "# this one will throw TypeError ... takes 1 positional argument but 2 were given\n",
+    "# print('Total cost: ', portfolio_cost('Data/missing.csv', 'silent'))\n",
+    "# the 2nd argument must be keyword argument named errors as follows\n",
+    "print('Total cost: ', portfolio_cost('Data/missing.csv', errors = 'warn'))"
    ]
   }
  ],
