--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -149,6 +149,185 @@
     "print(prices)\n",
     "print('IBM' in prices, 87.23 in prices)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Project: Building a Data Structure from a File\n",
+    "\n",
+    "1. Change a function name from portfolio_cost to read_portfolio\n",
+    "2. Return a list of holdings instead of portfolio cost\n",
+    "\n",
+    "Initially, holding is modelled as a tuple of (quote, date, shares, price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('AA', '2007-06-11', 100, 32.2), ('IBM', '2007-05-13\"', 50, 91.1), ('CAT', '2006-09-23', 150, 83.44), ('MSFT', '2007-05-17', 200, 51.23), ('GE', '2006-02-01', 95, 40.37), ('MSFT', '2006-10-31', 50, 65.1), ('IBM', '2006-07-09', 100, 70.44)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def read_portfolio(filename, *, errors='warn'):\n",
+    "    '''\n",
+    "    Read a CSV file with name, date, shares, price data into a list\n",
+    "    '''\n",
+    "\n",
+    "    if errors not in ['warn', 'silent', 'raise']:\n",
+    "        raise ValueError(\"errors must be one of 'warn', 'silent', 'raise'\")\n",
+    "    \n",
+    "    portfolio = []    # List of records\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                elif errors == 'raise':\n",
+    "                    raise    # Re-raise the last exception\n",
+    "                else:\n",
+    "                    pass    # Silence\n",
+    "                continue    # skip to the next row\n",
+    "            # record is a row consisting of all columns\n",
+    "            record = (row[0], row[1], row[2], row[3])\n",
+    "            portfolio.append(record)\n",
+    "    return portfolio\n",
+    "\n",
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "print(\"{0!r}\".format(portfolio))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further simplifation of record generation by converting an entire row to a tuple instead of packing all individual columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('AA', '2007-06-11', 100, 32.2), ('IBM', '2007-05-13\"', 50, 91.1), ('CAT', '2006-09-23', 150, 83.44), ('MSFT', '2007-05-17', 200, 51.23), ('GE', '2006-02-01', 95, 40.37), ('MSFT', '2006-10-31', 50, 65.1), ('IBM', '2006-07-09', 100, 70.44)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def read_portfolio(filename, *, errors='warn'):\n",
+    "    '''\n",
+    "    Read a CSV file with name, date, shares, price data into a list\n",
+    "    '''\n",
+    "\n",
+    "    if errors not in ['warn', 'silent', 'raise']:\n",
+    "        raise ValueError(\"errors must be one of 'warn', 'silent', 'raise'\")\n",
+    "    \n",
+    "    portfolio = []    # List of records\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                elif errors == 'raise':\n",
+    "                    raise    # Re-raise the last exception\n",
+    "                else:\n",
+    "                    pass    # Silence\n",
+    "                continue    # skip to the next row\n",
+    "            # record is a row consisting of all columns\n",
+    "            record = tuple(row)\n",
+    "            portfolio.append(record)\n",
+    "    return portfolio\n",
+    "\n",
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "print(\"{0!r}\".format(portfolio))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now calculate total (portfolio cost)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44671.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def read_portfolio(filename, *, errors='warn'):\n",
+    "    '''\n",
+    "    Read a CSV file with name, date, shares, price data into a list\n",
+    "    '''\n",
+    "\n",
+    "    if errors not in ['warn', 'silent', 'raise']:\n",
+    "        raise ValueError(\"errors must be one of 'warn', 'silent', 'raise'\")\n",
+    "    \n",
+    "    portfolio = []    # List of records\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                elif errors == 'raise':\n",
+    "                    raise    # Re-raise the last exception\n",
+    "                else:\n",
+    "                    pass    # Silence\n",
+    "                continue    # skip to the next row\n",
+    "            # record is a row consisting of all columns\n",
+    "            record = tuple(row)\n",
+    "            portfolio.append(record)\n",
+    "    return portfolio\n",
+    "\n",
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "total = 0.0\n",
+    "for holding in portfolio:\n",
+    "    total += holding[2] * holding[3]    # shares * price\n",
+    "print(total)"
+   ]
   }
  ],
  "metadata": {
