Unpack tuple into variable names

--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -328,6 +328,66 @@
     "    total += holding[2] * holding[3]    # shares * price\n",
     "print(total)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unpack holding into variable names to make code more readable i.e. referring to shares, price instead of holding[2], holding[3]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44671.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "def read_portfolio(filename, *, errors='warn'):\n",
+    "    '''\n",
+    "    Read a CSV file with name, date, shares, price data into a list\n",
+    "    '''\n",
+    "\n",
+    "    if errors not in ['warn', 'silent', 'raise']:\n",
+    "        raise ValueError(\"errors must be one of 'warn', 'silent', 'raise'\")\n",
+    "    \n",
+    "    portfolio = []    # List of records\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                elif errors == 'raise':\n",
+    "                    raise    # Re-raise the last exception\n",
+    "                else:\n",
+    "                    pass    # Silence\n",
+    "                continue    # skip to the next row\n",
+    "            # record is a row consisting of all columns\n",
+    "            record = tuple(row)\n",
+    "            portfolio.append(record)\n",
+    "    return portfolio\n",
+    "\n",
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "total = 0.0\n",
+    "for name, date, shares, price in portfolio:\n",
+    "    total += shares * price\n",
+    "print(total)"
+   ]
   }
  ],
  "metadata": {
