Represent holding with dict

--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -388,6 +388,64 @@
     "    total += shares * price\n",
     "print(total)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Switch to represent holding as a dictionary instead of tuple.\n",
+    "This is useful when there are many columns in a tuple. Because we don't have to tediously unpack all columns. Additionally, a change of order within a tuple will not affect calculation as we refer to them by name instead of its position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "​\n",
+    "def read_portfolio(filename, *, errors='warn'):\n",
+    "    '''\n",
+    "    Read a CSV file with name, date, shares, price data into a list\n",
+    "    '''\n",
+    "​\n",
+    "    if errors not in ['warn', 'silent', 'raise']:\n",
+    "        raise ValueError(\"errors must be one of 'warn', 'silent', 'raise'\")\n",
+    "    \n",
+    "    portfolio = []    # List of records\n",
+    "    with open(filename, 'r') as f:\n",
+    "        rows = csv.reader(f)\n",
+    "        headers = next(rows) # skip the first line\n",
+    "        for (rowno, row) in enumerate(rows, start=1):\n",
+    "            try:\n",
+    "                row[2] = int(row[2])\n",
+    "                row[3] = float(row[3])\n",
+    "            except ValueError as err:    # Catching all exception (!!! dangerous !!!)\n",
+    "                if errors == 'warn':\n",
+    "                    print('Row:', rowno, 'bad row:', row)\n",
+    "                    print('Reason:', err)\n",
+    "                elif errors == 'raise':\n",
+    "                    raise    # Re-raise the last exception\n",
+    "                else:\n",
+    "                    pass    # Silence\n",
+    "                continue    # skip to the next row\n",
+    "            # record is a row consisting of all columns\n",
+    "            record = {\n",
+    "                'name': row[0],\n",
+    "                'date': row[1],\n",
+    "                'shares': row[2],\n",
+    "                'price': row[3]\n",
+    "                     }\n",
+    "            portfolio.append(record)\n",
+    "    return portfolio\n",
+    "\n",
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "total = 0.0\n",
+    "for holding in portfolio:\n",
+    "    total += holding['shares'] * holding['price']\n",
+    "print(total)"
+   ]
   }
  ],
  "metadata": {
