Playing with JSON

--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -399,17 +399,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44671.15\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
-    "​\n",
+    "\n",
     "def read_portfolio(filename, *, errors='warn'):\n",
     "    '''\n",
     "    Read a CSV file with name, date, shares, price data into a list\n",
     "    '''\n",
-    "​\n",
+    "\n",
     "    if errors not in ['warn', 'silent', 'raise']:\n",
     "        raise ValueError(\"errors must be one of 'warn', 'silent', 'raise'\")\n",
     "    \n",
@@ -446,6 +454,43 @@
     "    total += holding['shares'] * holding['price']\n",
     "print(total)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### playing with json\n",
+    "#### as json string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}, {'name': 'IBM', 'date': '2007-05-13\"', 'shares': 50, 'price': 91.1}, {'name': 'CAT', 'date': '2006-09-23', 'shares': 150, 'price': 83.44}, {'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}, {'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}, {'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}, {'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "# export to other programs\n",
+    "data = json.dumps(portfolio)\n",
+    "\n",
+    "# import from other programs\n",
+    "port = json.loads(data)\n",
+    "\n",
+    "print(\"{!r}\".format(port))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
