Use sum with list comprehension

--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -736,18 +736,9 @@
       "GE = b'30.23'\n",
       "MSFT = b'153.74'\n",
       "IBM = b'53.00'\n",
-      "9.27\n"
+      "9.27\n",
+      "57898.35\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "57898.35"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -776,7 +767,12 @@
     "current_value = 0.0\n",
     "for holding in portfolio:\n",
     "    current_value += holding['shares'] * prices[holding['name']]\n",
-    "current_value"
+    "\n",
+    "# Or\n",
+    "# Further calculate current_value using list comprenhension\n",
+    "current_value = sum([holding['shares'] * prices[holding['name']] for holding in portfolio])\n",
+    "\n",
+    "print(current_value)"
    ]
   }
  ],
