--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -774,6 +774,57 @@
     "\n",
     "print(current_value)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.4 Example sorting and grouping\n",
+    "We can use named function as a key such as function holding_name below\n",
+    "```python\n",
+    "def holding_name(holding):\n",
+    "    return holding['name']\n",
+    "```\n",
+    "\n",
+    "Note: Also observe how to print a list member line by line. This is accomplished by unpacking the list with *operator. See https://docs.python.org/3/tutorial/controlflow.html#unpacking-argument-lists for more info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n",
+      "{'name': 'IBM', 'date': '2007-05-13\"', 'shares': 50, 'price': 91.1}\n",
+      "{'name': 'CAT', 'date': '2006-09-23', 'shares': 150, 'price': 83.44}\n",
+      "{'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}\n",
+      "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
+      "{'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n",
+      "{'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
+      "************************** sorted **************************\n",
+      "{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n",
+      "{'name': 'CAT', 'date': '2006-09-23', 'shares': 150, 'price': 83.44}\n",
+      "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
+      "{'name': 'IBM', 'date': '2007-05-13\"', 'shares': 50, 'price': 91.1}\n",
+      "{'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
+      "{'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}\n",
+      "{'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "print(*portfolio, sep='\\n') # print('\\n'.join(portfolio))\n",
+    "print('{:*^60s}'.format(' sorted '))\n",
+    "def holding_name(holding):\n",
+    "    return holding['name']\n",
+    "portfolio.sort(key=holding_name)\n",
+    "print(*portfolio, sep='\\n')"
+   ]
   }
  ],
  "metadata": {
