Use lambda to return sorting key

--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -824,6 +824,63 @@
     "    return holding['name']\n",
     "portfolio.sort(key=holding_name)\n",
     "print(*portfolio, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Or lambda such as\n",
+    "```python\n",
+    "portfolio.sort(key=lambda holding: holding['name'])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "************************* unsorted *************************\n",
+      "{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n",
+      "{'name': 'IBM', 'date': '2007-05-13\"', 'shares': 50, 'price': 91.1}\n",
+      "{'name': 'CAT', 'date': '2006-09-23', 'shares': 150, 'price': 83.44}\n",
+      "{'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}\n",
+      "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
+      "{'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n",
+      "{'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
+      "************************** sorted **************************\n",
+      "{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n",
+      "{'name': 'CAT', 'date': '2006-09-23', 'shares': 150, 'price': 83.44}\n",
+      "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
+      "{'name': 'IBM', 'date': '2007-05-13\"', 'shares': 50, 'price': 91.1}\n",
+      "{'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
+      "{'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}\n",
+      "{'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n",
+      "************************* earliest *************************\n",
+      "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
+      "************************** latest **************************\n",
+      "{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "print('{:*^60s}'.format(' unsorted '))\n",
+    "print(*portfolio, sep='\\n')\n",
+    "\n",
+    "print('{:*^60s}'.format(' sorted '))\n",
+    "portfolio.sort(key=lambda holding: holding['name'])\n",
+    "print(*portfolio, sep='\\n')\n",
+    "\n",
+    "print('{:*^60s}'.format(' earliest '))\n",
+    "print(min(portfolio, key = lambda holding: holding['date']))\n",
+    "print('{:*^60s}'.format(' latest '))\n",
+    "print(max(portfolio, key = lambda holding: holding['date']))"
    ]
   }
  ],
