Group holdings with itertools.groupby function

--- a/play/05/ch05.ipynb
+++ b/play/05/ch05.ipynb
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
       "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
       "{'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n",
       "{'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
-      "************************** sorted **************************\n",
+      "******************* portfolio.sort(key) ********************\n",
       "{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n",
       "{'name': 'CAT', 'date': '2006-09-23', 'shares': 150, 'price': 83.44}\n",
       "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
@@ -861,9 +861,9 @@
       "{'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
       "{'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}\n",
       "{'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n",
-      "************************* earliest *************************\n",
+      "********************** earliest (min) **********************\n",
       "{'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
-      "************************** latest **************************\n",
+      "*********************** latest (max) ***********************\n",
       "{'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n"
      ]
     }
@@ -873,14 +873,72 @@
     "print('{:*^60s}'.format(' unsorted '))\n",
     "print(*portfolio, sep='\\n')\n",
     "\n",
-    "print('{:*^60s}'.format(' sorted '))\n",
+    "print('{:*^60s}'.format(' portfolio.sort(key) '))\n",
     "portfolio.sort(key=lambda holding: holding['name'])\n",
     "print(*portfolio, sep='\\n')\n",
     "\n",
-    "print('{:*^60s}'.format(' earliest '))\n",
+    "print('{:*^60s}'.format(' earliest (min) '))\n",
     "print(min(portfolio, key = lambda holding: holding['date']))\n",
-    "print('{:*^60s}'.format(' latest '))\n",
+    "print('{:*^60s}'.format(' latest (max) '))\n",
     "print(max(portfolio, key = lambda holding: holding['date']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Play with grouping\n",
+    "We can use itertools.groupby function to group items.\n",
+    "\n",
+    "The input to the groupby function is the key to group.And it returns a list of (key, grouped items) pair.\n",
+    "\n",
+    "As a result, we can use dict comprehension to create a dictionary of grouped items."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAME: AA\n",
+      "    {'name': 'AA', 'date': '2007-06-11', 'shares': 100, 'price': 32.2}\n",
+      "NAME: CAT\n",
+      "    {'name': 'CAT', 'date': '2006-09-23', 'shares': 150, 'price': 83.44}\n",
+      "NAME: GE\n",
+      "    {'name': 'GE', 'date': '2006-02-01', 'shares': 95, 'price': 40.37}\n",
+      "NAME: IBM\n",
+      "    {'name': 'IBM', 'date': '2007-05-13\"', 'shares': 50, 'price': 91.1}\n",
+      "    {'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
+      "NAME: MSFT\n",
+      "    {'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}\n",
+      "    {'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n",
+      "{'name': 'IBM', 'date': '2007-05-13\"', 'shares': 50, 'price': 91.1}\n",
+      "{'name': 'IBM', 'date': '2006-07-09', 'shares': 100, 'price': 70.44}\n",
+      "\n",
+      "{'name': 'MSFT', 'date': '2007-05-17', 'shares': 200, 'price': 51.23}\n",
+      "{'name': 'MSFT', 'date': '2006-10-31', 'shares': 50, 'price': 65.1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "portfolio = read_portfolio('Data/portfolio.csv')\n",
+    "portfolio.sort(key = lambda holding: holding['name'])\n",
+    "\n",
+    "import itertools\n",
+    "for name, items in itertools.groupby(portfolio, key = lambda holding: holding['name']):\n",
+    "    print('NAME:', name)\n",
+    "    for it in items:\n",
+    "        print(f\"    {it}\")\n",
+    "\n",
+    "# create a dict of share name and groupd holdings\n",
+    "by_name = {name: list(items) for name, items in itertools.groupby(portfolio, key = lambda holding: holding['name'])}\n",
+    "print(*by_name['IBM'], sep='\\n')\n",
+    "print()\n",
+    "print(*by_name['MSFT'], sep='\\n')"
    ]
   }
  ],
